# EDMC-ModernOverlay

./: .gitignore  DEV.md  FAQ.md  Makefile  README.md  RELEASE_NOTES.md  __init__.py  client_refactor.md  debug.json  dev_settings.json  developer.md  edmcoverlay.py  group_cache.py  installer.iss  load.py  overlay_groupings.json  overlay_groupings.user.json  overlay_groupings_cache.json  overlay_settings.json  plugin_overrides.json  port.json  prefix_entries.py  pyproject.toml  test_resolution.json  tmp_override.json  version.py
.codex/: agents.md
.github/: pull_request_template.md
EDMCOverlay/: __init__.py  edmcoverlay.py
debug/: collect_overlay_debug.sh  collect_overlay_debug_linux.sh
docs/: FAQ.md  aspect-baseline.md  build.md  client_refactor.md  define_plugin_group-API.md  developer.md  emojis.md  escape_hatch_overrides.md  fill-mode-baseline.md  overlay-groupings.md  plugin-compat.md  plugin-overrides.md  pref_refactor.md  refactor-plan.md  rendering-pipeline.md  testing.md  troubleshooting.md  vt_report_header.html  vt_report_header.md
edmc_modernoverlay.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
overlay-client/: client_config.py  debug_config.py  developer_helpers.py  follow_controller.py  group_transform.py  grouping_adapter.py  grouping_helper.py  legacy_processor.py  legacy_store.py  overlay_client.py  payload_justifier.py  payload_model.py  payload_transform.py  platform_integration.py  plugin_overrides.py  render_config.json  render_pipeline.py  requirements.txt  vector_renderer.py  viewport_helper.py  viewport_transform.py  window_tracking.py
(+306 files in other folders)
